ALF/NSG_RULES/arm-generator/nsg-rules/generatedArmTemplate/template.json
{
  "parameters": {
    "DataSubnetSecurityGroupName": {
      "type": "string"
    }, 
    "WAFSubnetAddressRange": {
      "type": "string"
    }, 
    "ManagementSubnetSecurityGroupName": {
      "type": "string"
    }, 
    "DMZSubnetAddressRange": {
      "type": "string"
    }, 
    "vnetIPAddressRange": {
      "type": "string"
    }, 
    "WebSubnetSecurityGroupName": {
      "type": "string"
    }, 
    "DMZSubnetSecurityGroupName": {
      "type": "string"
    }, 
    "ManagementSubnetAddressRange": {
      "type": "string"
    }, 
    "WAFSubnetSecurityGroupName": {
      "type": "string"
    }, 
    "DataSubnetAddressRange": {
      "type": "string"
    }, 
    "WebSubnetAddressRange": {
      "type": "string"
    }, 
    "GatewaySubnetAddressRange": {
      "type": "string"
    }
  }, 
  "outputs": {}, 
  "variables": {}, 
  "contentVersion": "1.0.0.0", 
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#", 
  "resources": [
    {
      "properties": {
        "securityRules": []
      }, 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "name": "[parameters('WAFSubnetSecurityGroupName')]", 
      "apiVersion": "2015-06-15", 
      "location": "[resourceGroup().location]"
    }, 
    {
      "properties": {
        "securityRules": [
          {
            "name": "Allow_SSH_onPrem_EY_AppLayer", 
            "properties": {
              "priority": "100", 
              "direction": "Inbound", 
              "protocol": "Tcp", 
              "description": "Required for RDP remote management from EY", 
              "access": "Allow", 
              "destinationPortRange": "22", 
              "sourceAddressPrefix": "*", 
              "destinationAddressPrefix": "[parameters('DMZSubnetAddressRange')]", 
              "sourcePortRange": "*"
            }
          }
        ]
      }, 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "name": "[parameters('DMZSubnetSecurityGroupName')]", 
      "apiVersion": "2015-06-15", 
      "location": "[resourceGroup().location]"
    }, 
    {
      "properties": {
        "securityRules": [
          {
            "name": "Allow_RDP", 
            "properties": {
              "priority": "100", 
              "direction": "Inbound", 
              "protocol": "Tcp", 
              "description": "Required for SSH remote management from EY", 
              "access": "Allow", 
              "destinationPortRange": "3389", 
              "sourceAddressPrefix": "[parameters('vnetIPAddressRange')]", 
              "destinationAddressPrefix": "[parameters('WebSubnetAddressRange')]", 
              "sourcePortRange": "*"
            }
          }
        ]
      }, 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "name": "[parameters('WebSubnetSecurityGroupName')]", 
      "apiVersion": "2015-06-15", 
      "location": "[resourceGroup().location]"
    }, 
    {
      "properties": {
        "securityRules": [
          {
            "name": "Allow_RDP", 
            "properties": {
              "priority": "100", 
              "direction": "Inbound", 
              "protocol": "Tcp", 
              "description": "Required for SSH remote management from EY", 
              "access": "Allow", 
              "destinationPortRange": "3389", 
              "sourceAddressPrefix": "[parameters('vnetIPAddressRange)]", 
              "destinationAddressPrefix": "[parameters('DataSubnetAddressRange')]", 
              "sourcePortRange": "*"
            }
          }
        ]
      }, 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "name": "[parameters('DataSubnetSecurityGroupName')]", 
      "apiVersion": "2015-06-15", 
      "location": "[resourceGroup().location]"
    }, 
    {
      "properties": {
        "securityRules": [
          {
            "name": "Allow_RDP_onPrem_EY_DataLayer", 
            "properties": {
              "priority": "100", 
              "direction": "Inbound", 
              "protocol": "Tcp", 
              "description": "Required for SSH remote management from EY", 
              "access": "Allow", 
              "destinationPortRange": "3389", 
              "sourceAddressPrefix": "[parameters('vnetIPAddressRange')]", 
              "destinationAddressPrefix": "[parameters('ManagementSubnetAddressRange')]", 
              "sourcePortRange": "*"
            }
          }
        ]
      }, 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "name": "[parameters('ManagementSubnetSecurityGroupName')]", 
      "apiVersion": "2015-06-15", 
      "location": "[resourceGroup().location]"
    }
  ]
}
